tests/ui/attributes/unsafe/extraneous-unsafe-attributes.stderr
error: `cfg` is not an unsafe attribute
  --> $DIR/extraneous-unsafe-attributes.rs:5:3
   |
LL | #[unsafe(cfg(any()))]
   |   ^^^^^^
   |
   = note: extraneous unsafe is not allowed in attributes

error: `cfg_attr` is not an unsafe attribute
  --> $DIR/extraneous-unsafe-attributes.rs:8:3
   |
LL | #[unsafe(cfg_attr(any(), allow(dead_code)))]
   |   ^^^^^^
   |
   = note: extraneous unsafe is not allowed in attributes

error: `test` is not an unsafe attribute
  --> $DIR/extraneous-unsafe-attributes.rs:11:3
   |
LL | #[unsafe(test)]
   |   ^^^^^^
   |
   = note: extraneous unsafe is not allowed in attributes

error: `ignore` is not an unsafe attribute
  --> $DIR/extraneous-unsafe-attributes.rs:14:3
   |
LL | #[unsafe(ignore = "test")]
   |   ^^^^^^
   |
   = note: extraneous unsafe is not allowed in attributes

error: `should_panic` is not an unsafe attribute
  --> $DIR/extraneous-unsafe-attributes.rs:17:3
   |
LL | #[unsafe(should_panic(expected = "test"))]
   |   ^^^^^^
   |
   = note: extraneous unsafe is not allowed in attributes

error: `macro_use` is not an unsafe attribute
  --> $DIR/extraneous-unsafe-attributes.rs:20:3
   |
LL | #[unsafe(macro_use)]
   |   ^^^^^^
   |
   = note: extraneous unsafe is not allowed in attributes

error: `macro_export` is not an unsafe attribute
  --> $DIR/extraneous-unsafe-attributes.rs:22:7
   |
LL |     #[unsafe(macro_export)]
   |       ^^^^^^
   |
   = note: extraneous unsafe is not allowed in attributes

error: `used` is not an unsafe attribute
  --> $DIR/extraneous-unsafe-attributes.rs:28:3
   |
LL | #[unsafe(used)]
   |   ^^^^^^
   |
   = note: extraneous unsafe is not allowed in attributes

error: aborting due to 8 previous errors

